make sure build happens before test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,5 @@ workflows:
       - build-and-test
       - node/test:
           test-results-for: mocha
-
+          requires:
+            - build-and-test
