--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,11 @@ orbs:
 
 jobs:
   build-and-test:
-    docker:
-      - image: cimg/node:lts
-#    executor:
-#      name: node/default
-#      tag: '13.14'
+#    docker:
+#      - image: cimg/node:lts
+    executor:
+      name: node/default
+      tag: '13.14'
     steps:
       - checkout
       - browser-tools/install-browser-tools:
@@ -19,15 +19,6 @@ jobs:
             override-ci-command: npm install
       - run:
           command: npm run test
-#      - run:
-#          name: "NPM Install bits"
-#          command: "npm install"
-#      - run:
-#          name: "Node make deps"
-#          command: "node make all"
-#      - run:
-#          name: "NPM test"
-#          command: "npm test"
 
 workflows:
   build-and-test:
